# QT_Tynamo_Pipeline

./: CMakeLists.txt  README.md  package.xml
scripts/: config.py  pipeline.py
